# nr-theses

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  push-schemas.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
invenio_nusl_theses/: __init__.py  api.py  cli.py  config.py  constants.py  ext.py  permissions.py  proxies.py  record.py  version.py
invenio_nusl_theses/included_mappings/v6/: nusl-taxonomies-doctype-v1.0.0.json  nusl-taxonomies-faculty-v1.0.0.json  nusl-taxonomies-provider-v1.0.0.json  nusl-taxonomies-studyfields-v1.0.0.json  nusl-taxonomies-studyprogramme-v1.0.0.json  nusl-taxonomies-subject-v1.0.0.json  nusl-taxonomies-university-v1.0.0.json
invenio_nusl_theses/included_mappings/v7/: nusl-common-v1.0.0.json  nusl-taxonomies-accessRights-v1.0.0.json  nusl-taxonomies-contributor-v1.0.0.json  nusl-taxonomies-czmesh-v1.0.0.json  nusl-taxonomies-institution-v1.0.0.json  nusl-taxonomies-medvik-v1.0.0.json  nusl-taxonomies-psh-v1.0.0.json  nusl-taxonomies-rights-v1.0.0.json  nusl-taxonomies-studyfields-v1.0.0.json
invenio_nusl_theses/jsonschemas/invenio_nusl_theses/: nusl-theses-staging-v1.0.0.json  nusl-theses-v1.0.0.json
invenio_nusl_theses/mappings/: __init__.py
invenio_nusl_theses/mappings/references/: nusl-common-v1.0.0.json  nusl-theses-v1.0.0.json
invenio_nusl_theses/mappings/v6/: __init__.py
invenio_nusl_theses/mappings/v6/invenio_nusl_theses/: nusl-theses-staging-v1.0.0.json  nusl-theses-v1.0.0.json
invenio_nusl_theses/mappings/v7/invenio_nusl_theses/: nusl-theses-v1.0.0.json
invenio_nusl_theses/marshmallow/: __init__.py  json.py  subschemas.py
invenio_nusl_theses/marshmallow/data/: aliases.py  faculties.csv  field.csv  fields_dict.py  fields_refactor.py  programme.csv  universities.csv
invenio_nusl_theses/serializers/: __init__.py
nr_theses/: api.py  config.py  minters.py  permissions.py  providers.py  record.py  search.py
nr_theses/jsonschemas/nr_theses/: nr-theses-v1.0.0.json
nr_theses/mappings/v7/nr_theses/: nr-theses-v1.0.0.json
nr_theses/marshmallow/: json.py
scripts/: clone.sh  extract.py  push.sh
tests/: conftest.py  helpers.py  test_api.py  test_fetcher.py  test_jsonschema.py  test_mappings.py  test_marshmallow.py  test_marshmallow_subschemas.py  test_minter.py  test_record.py  test_references.py  test_version.py
