[tool]
[tool.poetry]
name = "invenio-nusl-theses"
version = "3.0.0a2"
description = "NUSL theses data model."
license = "MIT"
keywords = ["nusl", "Invenio", "theses"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
oarepo = { version = "^3.3", optional = true }
oarepo-invenio-model = "^2.0.1"
oarepo-multilingual = "^2.2.0"
oarepo-records-draft = "^5.0.0a7"
oarepo-references = "^1.8.1"
oarepo-taxonomies = "^2.4.1"
oarepo-validate = "^1.2.8"
pytest = { version = "^5.0.0", optional = true }
pytest-cov = "^2.10.1"
sphinx = { version = ">=1.5.1", optional = true }
invenio-nusl-common = { git = "https://github.com/Narodni-repozitar/invenio-nusl-common.git", branch = "master" }
pytest-runner = "^5.2"

[tool.poetry.extras]
tests = ["oarepo", "pytest"]
docs = ["sphinx"]

[tool.poetry.plugins]
[tool.poetry.plugins."invenio_base.apps"]
'theses' = 'invenio_nusl_theses:InvenioNUSLTheses'

[tool.poetry.plugins."invenio_base.api_apps"]
'theses' = 'invenio_nusl_theses:InvenioNUSLTheses'

[tool.poetry.plugins.'invenio_jsonschemas.schemas']
'invenio_nusl_theses' = 'invenio_nusl_theses.jsonschemas'

[tool.poetry.plugins.'invenio_search.mappings']
'invenio_nusl_theses' = 'invenio_nusl_theses.mappings'

[tool.poetry.plugins.'oarepo_mapping_includes']
'invenio_nusl_theses' = 'invenio_nusl_theses.mapping_includes'

